[package]
name = "build_const"
authors = ["Garrett Berg <vitiral@gmail.com>"]
description = "library for creating importable constants from build.rs or a script"
keywords = ["embedded", "no_std", "build", "const", "static"]
license = "MIT"
repository = "https://github.com/build_const"
version = "0.1.0"
